[gd_scene load_steps=61 format=3 uid="uid://tdidx2sutpay"]

[ext_resource type="Texture2D" uid="uid://lb2qrqhegi02" path="res://Traps/Turret Electric/electric_turret.png" id="1_6xuf2"]
[ext_resource type="Script" path="res://Scripts/turret_electric.gd" id="1_gv3kk"]
[ext_resource type="Texture2D" uid="uid://cbawfkxgxes3a" path="res://Traps/Turret Electric/turret_electricity_destroyed.png" id="2_qpurn"]
[ext_resource type="Texture2D" uid="uid://bopib45e30hrg" path="res://Traps/Turret Electric/turret_electricity_hit_react.png" id="3_xiyou"]
[ext_resource type="Texture2D" uid="uid://b52wakahgw8q1" path="res://GUI/ProgressBar_05/BarV5_Bar.png" id="5_8yeg5"]
[ext_resource type="Texture2D" uid="uid://dqum0tvp8yupk" path="res://GUI/ProgressBar_05/BarV5_ProgressBar.png" id="6_jbkix"]
[ext_resource type="AudioStream" uid="uid://vbrca1886hjs" path="res://Audio/SFX/turret_laser_ceiling_hit.tres" id="7_0wbsi"]
[ext_resource type="Script" path="res://addons/godot_sfxr/SfxrStreamPlayer2D.gd" id="8_2uq50"]
[ext_resource type="AudioStream" uid="uid://bcs4umk16g1my" path="res://Audio/SFX/turret_laser_ceiling_destroyed.tres" id="9_u6hmq"]
[ext_resource type="AudioStream" uid="uid://ckrxxcsr4io5c" path="res://Audio/SFX/turret_electric_charge_shoot.mp3" id="10_oqivr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bexbw"]
atlas = ExtResource("1_6xuf2")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_duehc"]
atlas = ExtResource("1_6xuf2")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3rkb1"]
atlas = ExtResource("1_6xuf2")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q87c7"]
atlas = ExtResource("1_6xuf2")
region = Rect2(192, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3hn2"]
atlas = ExtResource("1_6xuf2")
region = Rect2(256, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfq8j"]
atlas = ExtResource("1_6xuf2")
region = Rect2(320, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qbu6"]
atlas = ExtResource("1_6xuf2")
region = Rect2(384, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjtjd"]
atlas = ExtResource("1_6xuf2")
region = Rect2(448, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vo4wf"]
atlas = ExtResource("1_6xuf2")
region = Rect2(512, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5po4i"]
atlas = ExtResource("1_6xuf2")
region = Rect2(576, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1m8y7"]
atlas = ExtResource("1_6xuf2")
region = Rect2(640, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmy0j"]
atlas = ExtResource("1_6xuf2")
region = Rect2(704, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fydl"]
atlas = ExtResource("1_6xuf2")
region = Rect2(768, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7h7kd"]
atlas = ExtResource("1_6xuf2")
region = Rect2(832, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nf862"]
atlas = ExtResource("1_6xuf2")
region = Rect2(896, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ox3d5"]
atlas = ExtResource("1_6xuf2")
region = Rect2(960, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8ktq"]
atlas = ExtResource("1_6xuf2")
region = Rect2(1024, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_if515"]
atlas = ExtResource("1_6xuf2")
region = Rect2(1088, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jt1v"]
atlas = ExtResource("1_6xuf2")
region = Rect2(1152, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lo8ht"]
atlas = ExtResource("1_6xuf2")
region = Rect2(1216, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5hjh"]
atlas = ExtResource("1_6xuf2")
region = Rect2(1280, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjyup"]
atlas = ExtResource("1_6xuf2")
region = Rect2(1344, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymcbo"]
atlas = ExtResource("1_6xuf2")
region = Rect2(1408, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1473q"]
atlas = ExtResource("1_6xuf2")
region = Rect2(1472, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykhen"]
atlas = ExtResource("1_6xuf2")
region = Rect2(1536, 0, 64, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_nx63p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bexbw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_duehc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3rkb1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q87c7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3hn2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfq8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qbu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjtjd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vo4wf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5po4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1m8y7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmy0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fydl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7h7kd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nf862")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ox3d5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8ktq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_if515")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_2jt1v")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_lo8ht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5hjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjyup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymcbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1473q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykhen")
}],
"loop": true,
"name": &"fire",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_hfy8r"]
atlas = ExtResource("2_qpurn")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_80iay"]
atlas = ExtResource("2_qpurn")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_klvo5"]
atlas = ExtResource("2_qpurn")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vk2qa"]
atlas = ExtResource("2_qpurn")
region = Rect2(192, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oim3p"]
atlas = ExtResource("2_qpurn")
region = Rect2(256, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ci1a"]
atlas = ExtResource("2_qpurn")
region = Rect2(320, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_clx3s"]
atlas = ExtResource("2_qpurn")
region = Rect2(384, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbhj8"]
atlas = ExtResource("2_qpurn")
region = Rect2(448, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tl8wf"]
atlas = ExtResource("2_qpurn")
region = Rect2(512, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdg1s"]
atlas = ExtResource("2_qpurn")
region = Rect2(576, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_11ogo"]
atlas = ExtResource("2_qpurn")
region = Rect2(640, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2ffw"]
atlas = ExtResource("2_qpurn")
region = Rect2(704, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pd025"]
atlas = ExtResource("2_qpurn")
region = Rect2(768, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6d8e4"]
atlas = ExtResource("2_qpurn")
region = Rect2(832, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3woj"]
atlas = ExtResource("2_qpurn")
region = Rect2(896, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhd0e"]
atlas = ExtResource("2_qpurn")
region = Rect2(960, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdpjg"]
atlas = ExtResource("2_qpurn")
region = Rect2(1024, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmj7s"]
atlas = ExtResource("3_xiyou")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5axjb"]
atlas = ExtResource("3_xiyou")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yp1u4"]
atlas = ExtResource("3_xiyou")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f36bh"]
atlas = ExtResource("3_xiyou")
region = Rect2(192, 0, 64, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_o3jht"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfy8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80iay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klvo5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vk2qa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oim3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ci1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_clx3s")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_dbhj8")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_tl8wf")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_kdg1s")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_11ogo")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_m2ffw")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_pd025")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_6d8e4")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_x3woj")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_lhd0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdpjg")
}],
"loop": false,
"name": &"destroy",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmj7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5axjb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yp1u4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f36bh")
}],
"loop": false,
"name": &"hit_react",
"speed": 16.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oe3iu"]
size = Vector2(42, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uah85"]
size = Vector2(42, 48)

[node name="Turret_Electric" type="Node2D" groups=["Enemy"]]
script = ExtResource("1_gv3kk")

[node name="AnimatedSprite2D_Base" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -32)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_nx63p")
animation = &"fire"

[node name="AnimatedSprite2D_HitReact" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, -32)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_o3jht")
animation = &"destroy"

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-32, -39)

[node name="Area2D_Body" type="Area2D" parent="." groups=["Enemy"]]
collision_layer = 2
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_Body"]
position = Vector2(23, -24)
shape = SubResource("RectangleShape2D_oe3iu")

[node name="HealthBar" type="TextureProgressBar" parent="."]
offset_left = 14.0
offset_top = -55.0
offset_right = 34.0
offset_bottom = -53.0
max_value = 75.0
value = 75.0
nine_patch_stretch = true
texture_under = ExtResource("5_8yeg5")
texture_progress = ExtResource("6_jbkix")

[node name="Timer" type="Timer" parent="."]

[node name="SfxrStreamPlayer2D_Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_0wbsi")
pitch_scale = 0.65
bus = &"SFX"
script = ExtResource("8_2uq50")
wave/type = 1
sample_params/sound_vol = 0.25
sample_params/sample_rate = 44100.0
envelope/attack_time = 0.0
envelope/sustain_time = 0.6641
envelope/punch_time = 0.0
envelope/decay_time = 0.0
frequency/start_frequency = 0.351734
frequency/min_freq_cutoff = 0.0
frequency/slide = 0.0
frequency/delta_slide = 0.0
vibrato/depth = 0.0
vibrato/speed = 0.0
arpeggiation/frequency_mult = 0.0
arpeggiation/change_speed = 0.0
duty_cycle/duty_cycle = 0.0
duty_cycle/sweep = 0.0
retrigger/rate = 0.0
flanger/offset = 0.0
flanger/sweep = 0.0
low_pass_filter/cutoff_frequency = 1.0
low_pass_filter/cutoff_sweep = 0.0
low_pass_filter/resonance = 0.0
high_pass_filter/cutoff_frequency = 0.0
high_pass_filter/cutoff_sweep = 0.0

[node name="SfxrStreamPlayer2D_Destroyed" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_u6hmq")
volume_db = -6.0
bus = &"SFX"
script = ExtResource("8_2uq50")
wave/type = 1
sample_params/sound_vol = 0.25
sample_params/sample_rate = 44100.0
envelope/attack_time = 0.0
envelope/sustain_time = 0.6641
envelope/punch_time = 0.0
envelope/decay_time = 0.0
frequency/start_frequency = 0.351734
frequency/min_freq_cutoff = 0.0
frequency/slide = 0.0
frequency/delta_slide = 0.0
vibrato/depth = 0.0
vibrato/speed = 0.0
arpeggiation/frequency_mult = 0.0
arpeggiation/change_speed = 0.0
duty_cycle/duty_cycle = 0.0
duty_cycle/sweep = 0.0
retrigger/rate = 0.0
flanger/offset = 0.0
flanger/sweep = 0.0
low_pass_filter/cutoff_frequency = 1.0
low_pass_filter/cutoff_sweep = 0.0
low_pass_filter/resonance = 0.0
high_pass_filter/cutoff_frequency = 0.0
high_pass_filter/cutoff_sweep = 0.0

[node name="AudioStreamPlayer2D_ChargeShoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_oqivr")
max_distance = 1000.0
bus = &"SFX"

[node name="StaticBody2D_Body" type="StaticBody2D" parent="." groups=["Enemy"]]
z_index = -1
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D_Body"]
position = Vector2(23, -24)
shape = SubResource("RectangleShape2D_uah85")

[connection signal="frame_changed" from="AnimatedSprite2D_Base" to="." method="_on_animated_sprite_2d_base_frame_changed"]
[connection signal="animation_finished" from="AnimatedSprite2D_HitReact" to="." method="_on_animated_sprite_2d_hit_react_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D_HitReact" to="." method="_on_animated_sprite_2d_hit_react_frame_changed"]
[connection signal="area_entered" from="Area2D_Body" to="." method="_on_area_2d_body_area_entered"]
